# appimagezip

./: Cargo.toml  Makefile  README.md
bootstrap/: Cargo.toml  event.rs  fs.rs  main.rs
src/: appimage.rs  bootstrap.rs  main.rs  util.rs
